bugfix: fixed visibility of lms-ui-contents internal elements which are bigger than container

--- a/css/style.less
+++ b/css/style.less
@@ -190,7 +190,7 @@ TABLE		{ border-collapse: collapse; border-color: #000000 }
 }
 
 #lms-ui-contents {
-	overflow: hidden;
+	overflow: visible;
 //	width: 100%;
 //	height: 100vh;
 	display: flex;
@@ -264,7 +264,7 @@ TABLE		{ border-collapse: collapse; border-color: #000000 }
 #lms-ui-module-view {
 	width: 100%;
 	flex: 1 1 auto;
-	overflow: hidden;
+	overflow: visible;
 	//margin-top: 0.5em;
 	h1 {
 		margin-block-start: 0.4em;
